<resources>
    <string name="app_name">RClone Anime</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Bottom bar -->
    <string name="watched">Watched</string>
    <string name="all">All</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_drives">Drives</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="download">Download</string>
    <string name="select_all">Select all</string>
    <string name="deselect">Deselect</string>

    <!-- Controls -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="refresh_all">Refresh all</string>
    <string name="refresh">Refresh</string>

    <!-- Drive -->
    <string name="driveName">Drive name</string>
    <string name="drivePath">Directory path</string>
    <string name="deleteDrive">Do you want to delete drive %1$s?</string>

    <!-- Errors -->
    <string name="driveNameError">Invalid drive name</string>
    <string name="drivePathError">Invalid directory path</string>
    <string name="driveDelimiter">:</string>
    <string name="driveLastRefresh">Last refresh:</string>
    <string name="never">Never</string>
    <string name="passwordError">Error while setting password</string>
</resources>
