<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        style="@style/Drive">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/drive_name"
                    style="@style/DriveName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driveName"/>

                <TextView
                    style="@style/DriveName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driveDelimiter" />

                <TextView
                    android:id="@+id/drive_path"
                    style="@style/DriveName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drivePath" />

                <ImageView
                    android:id="@+id/watchedIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_visibility_white_24dp"
                    style="@style/DriveWatchedIcon"/>
            </LinearLayout>

            <TextView
                android:id="@+id/drive_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1964" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driveLastRefresh"
                    android:paddingEnd="5sp"/>

                <TextView
                    android:id="@+id/last_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driveLastRefresh" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">
            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_white_24dp"
                android:contentDescription="@string/edit" />
            <ImageButton
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh_white_24dp"
                android:contentDescription="@string/refresh"/>
            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_white_24dp"
                android:contentDescription="@string/delete"/>
        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/AnimeFileDivider"
        android:layout_width="match_parent" />
</LinearLayout>